crates/liar-cli/src/snapshots/liar__render__tests__a_caret_after_multibyte_characters_on_the_same_line_aligns.snap
---
source: crates/liar-cli/src/render.rs
assertion_line: 154
expression: out
---
error[C1]: 'save_user' is never awaited. this line does nothing.
 --> example.py:1:12
  |
1 | réçultat = save_user(u)
  |            ^^^^^^^^^
