crates/liar-cli/src/snapshots/liar__render__tests__secondary_labels_render_beneath_the_primary.snap
---
source: crates/liar-cli/src/render.rs
assertion_line: 131
expression: out
---
warning[C3f]: 3 variables called 'data' in this file. none are related.
 --> example.py:1:1
  |
1 | data = 1
  | ^^^^
2 | data = []
  | ----
3 | data = 'x'
  | ----
