crates/liar-cli/src/snapshots/liar__render__tests__tone_Dry.snap
---
source: crates/liar-cli/src/render.rs
assertion_line: 117
expression: out
---
error[C1]: 'save_user' is never awaited. this line does nothing.
 --> example.py:2:5
  |
2 |     save_user(u)
  |     ^^^^^^^^^^^^
